--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,9 @@
         "fnvi/mongo": "0.1.0",
         "fnvi/email": "0.1.0"
     },
+    "require-dev": {
+        "phpunit/phpunit": "5.4.*"
+    },
     "autoload":{
         "psr-4":{
             "FNVi\\Authentication\\":"src"
